--- a/src/app/components/inicio/register/register.component.html
+++ b/src/app/components/inicio/register/register.component.html
@@ -13,6 +13,12 @@
                     </span>
                 </div>
                 <div class="form-group mb-3" style="text-align: start;">
+                    <input type="text" class="form-control" placeholder="Email" formControlName="email">
+                    <span class="text-danger" *ngIf="emailNoValido">
+                        El Email <strong>es requerido</strong>
+                    </span>
+                </div>
+                <div class="form-group mb-3" style="text-align: start;">
                     <input type="password" class="form-control" placeholder="Contraseña" formControlName="password">
                     <span class="text-danger me-2" *ngIf="passNoValido">
                         La contrasena debe tener como <strong>minimo 4 caracteres</strong>
