Hasta donde el usuario no loggeado contesta el cuestionario, falta guardar esos datos

--- a/src/app/components/inicio/list-cuestionarios2/ingresar-nombre/ingresar-nombre.component.html
+++ b/src/app/components/inicio/list-cuestionarios2/ingresar-nombre/ingresar-nombre.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="mt-auto">
             <button class="btn btn-primary btn-lg" routerLink="/inicio/listCuestionarios">VOLVER</button>
-            <button class="btn btn-primary btn-lg btn-slg" (click)="siguiente()" [disabled]="nombreParticipante == ''">IGUIENTE</button>
+            <button class="btn btn-primary btn-lg btn-slg" (click)="siguiente()" [disabled]="nombreParticipante == ''">SIGUIENTE</button>
         </div>
     </div>
 </div>
