--- a/src/app/components/inicio/list-cuestionarios2/pregunta/pregunta.component.html
+++ b/src/app/components/inicio/list-cuestionarios2/pregunta/pregunta.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="card text-center" >
-        <app-login *ngIf="loading"></app-login>
+        <app-loading *ngIf="loading"></app-loading>
         <div *ngIf="listPreguntas.length > 0">
             <h4 class="card-title">{{obtenerPregunta()}}</h4>
             <ul class="list-group">
